<resources>
    <string name="app_name">MonitorApp</string>
    <string name="action_settings">Configuración</string>
    <string name="action_nuevo">Nuevo</string>
    <string name="action_buscar">Buscar</string>
    <string name="action_ordenar">Ordenar</string>
    <string name="action_sobre">Sobre MonitorApp</string>
    <string name="title_activity_listado" translatable="false">title_activity_listado</string>
    <string name="nombre">Nombre</string>
    <string name="email" translatable="false">E-mail</string>
    <string name="apellido">Apellido</string>
    <string name="dni">DNI</string>
    <string name="telefono">Telefono</string>
    <string name="titulo">MTL</string>
    <string name="aceptar">Aceptar</string>
    <string name="date">Fecha de nacimiento</string>
    <string name="cancel">Cancelar</string>
    <string name="add">Añadir</string>
    <string name="add_new_option">Añadir nueva seccion</string>
    <string name="your_option">Nueva seccion:</string>
    <string name="exit">Salir</string>
    <string name="toExit">¿Desea salir?</string>
    <string name="creatror">Creador</string>
    <string name="delete">Eliminar</string>
    <string name="Seleccione_Imagen">Seleccione una imagen</string>
    <string name="ayuda">Ayuda</string>
</resources>
