<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="es.iesfrancisodelosrios.acmartinez.monitorapp.views.ListadoActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_ordenar"
        android:title="@string/action_ordenar"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_Sobre"
        android:title="@string/action_sobre"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/action_Ayuda"
        android:orderInCategory="100"
        android:title="@string/ayuda"
        app:showAsAction="never" />


    <item

        android:id="@+id/action_buscar"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="100"
        android:title="@string/action_buscar"
        app:showAsAction="ifRoom" />

</menu>

