<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/itemlist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">




    <ImageView
        android:id="@+id/imageView"
        android:layout_width="82dp"
        android:layout_height="79dp"
        android:layout_weight="1"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="id" />

    <TextView
        android:id="@+id/name"
        android:layout_width="251dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/nombre" />

    <TextView
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/apellido" />

    <TextView
        android:id="@+id/email"
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/email" />

    <TextView
        android:id="@+id/fnacimiento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/date" />

    <TextView
        android:id="@+id/nif"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/dni" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/telefono" />

    <TextView
        android:id="@+id/seccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="seccion" />

    <CheckBox
        android:id="@+id/MTL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:enabled="false"
        android:text="@string/titulo" />


</LinearLayout>